[package]
name = "aoj-rust"
version = "0.1.0"
authors = ["Acasune <tttt4aaaa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "itp1-1-a"
path = "ITP1/ITP1-1/itp1-1-a.rs"

[[bin]]
name = "itp1-1-b"
path = "ITP1/ITP1-1/itp1-1-b.rs"

[[bin]]
name = "itp1-1-c"
path = "ITP1/ITP1-1/itp1-1-c.rs"

[[bin]]
name = "itp1-1-d"
path = "ITP1/ITP1-1/itp1-1-d.rs"

[[bin]]
name = "itp1-2-a"
path = "ITP1/ITP1-2/itp1-2-a.rs"

[[bin]]
name = "itp1-2-b"
path = "ITP1/ITP1-2/itp1-2-b.rs"

[[bin]]
name = "itp1-2-c"
path = "ITP1/ITP1-2/itp1-2-c.rs"

[[bin]]
name = "itp1-2-d"
path = "ITP1/ITP1-2/itp1-2-d.rs"

[[bin]]
name = "itp1-3-a"
path = "ITP1/ITP1-3/itp1-3-a.rs"

[[bin]]
name = "itp1-3-b"
path = "ITP1/ITP1-3/itp1-3-b.rs"

[[bin]]
name = "itp1-3-c"
path = "ITP1/ITP1-3/itp1-3-c.rs"

[[bin]]
name = "itp1-3-d"
path = "ITP1/ITP1-3/itp1-3-d.rs"

[[bin]]
name = "itp1-4-a"
path = "ITP1/ITP1-4/itp1-4-a.rs"

[[bin]]
name = "itp1-4-b"
path = "ITP1/ITP1-4/itp1-4-b.rs"

[[bin]]
name = "itp1-4-c"
path = "ITP1/ITP1-4/itp1-4-c.rs"

[[bin]]
name = "itp1-4-d"
path = "ITP1/ITP1-4/itp1-4-d.rs"

[[bin]]
name = "itp1-5-a"
path = "ITP1/ITP1-5/itp1-5-a.rs"

[[bin]]
name = "itp1-5-b"
path = "ITP1/ITP1-5/itp1-5-b.rs"

[[bin]]
name = "itp1-5-c"
path = "ITP1/ITP1-5/itp1-5-c.rs"

[[bin]]
name = "itp1-5-d"
path = "ITP1/ITP1-5/itp1-5-d.rs"

[[bin]]
name = "itp1-6-a"
path = "ITP1/ITP1-6/itp1-6-a.rs"

[[bin]]
name = "itp1-6-b"
path = "ITP1/ITP1-6/itp1-6-b.rs"

[[bin]]
name = "itp1-6-c"
path = "ITP1/ITP1-6/itp1-6-c.rs"

[[bin]]
name = "itp1-6-d"
path = "ITP1/ITP1-6/itp1-6-d.rs"

[[bin]]
name = "itp1-7-a"
path = "ITP1/ITP1-7/itp1-7-a.rs"

[[bin]]
name = "itp1-7-b"
path = "ITP1/ITP1-7/itp1-7-b.rs"

[[bin]]
name = "itp1-7-c"
path = "ITP1/ITP1-7/itp1-7-c.rs"

[[bin]]
name = "itp1-7-d"
path = "ITP1/ITP1-7/itp1-7-d.rs"
