[package]
name = "aoj-rust"
version = "1.14.1"
authors = ["Acasune <tttt4aaaa@gmail.com>"]
edition = "2018"

##########
## ITP2 ##
##########

[[bin]]
name = "itp2-1-a"
path = "ITP2-1/itp2-1-a.rs"

[[bin]]
name = "itp2-1-b"
path = "ITP2-1/itp2-1-b.rs"

[[bin]]
name = "itp2-1-c"
path = "ITP2-1/itp2-1-c.rs"

[[bin]]
name = "itp2-1-d"
path = "ITP2-1/itp2-1-d.rs"

[[bin]]
name = "itp2-2-a"
path = "ITP2-2/itp2-2-a.rs"

[[bin]]
name = "itp2-2-b"
path = "ITP2-2/itp2-2-b.rs"

[[bin]]
name = "itp2-2-c"
path = "ITP2-2/itp2-2-c.rs"

[[bin]]
name = "itp2-2-d"
path = "ITP2-2/itp2-2-d.rs"

[[bin]]
name = "itp2-3-a"
path = "ITP2-3/itp2-3-a.rs"

[[bin]]
name = "itp2-3-b"
path = "ITP2-3/itp2-3-b.rs"

[[bin]]
name = "itp2-3-c"
path = "ITP2-3/itp2-3-c.rs"

[[bin]]
name = "itp2-3-d"
path = "ITP2-3/itp2-3-d.rs"
