[package]
name = "aoj-rust"
version = "1.14.1"
authors = ["Acasune <tttt4aaaa@gmail.com>"]
edition = "2018"

##########
## ITP2 ##
##########

[[bin]]
name = "itp2-1-a"
path = "ITP2-1/itp2-1-a.rs"

[[bin]]
name = "itp2-1-b"
path = "ITP2-1/itp2-1-b.rs"

[[bin]]
name = "itp2-1-c"
path = "ITP2-1/itp2-1-c.rs"

[[bin]]
name = "itp2-1-d"
path = "ITP2-1/itp2-1-d.rs"

[[bin]]
name = "itp2-2-a"
path = "ITP2-2/itp2-2-a.rs"

[[bin]]
name = "itp2-2-b"
path = "ITP2-2/itp2-2-b.rs"

[[bin]]
name = "itp2-2-c"
path = "ITP2-2/itp2-2-c.rs"

[[bin]]
name = "itp2-2-d"
path = "ITP2-2/itp2-2-d.rs"

[[bin]]
name = "itp2-3-a"
path = "ITP2-3/itp2-3-a.rs"

[[bin]]
name = "itp2-3-b"
path = "ITP2-3/itp2-3-b.rs"

[[bin]]
name = "itp2-3-c"
path = "ITP2-3/itp2-3-c.rs"

[[bin]]
name = "itp2-3-d"
path = "ITP2-3/itp2-3-d.rs"

[[bin]]
name = "itp2-4-a"
path = "ITP2-4/itp2-4-a.rs"

[[bin]]
name = "itp2-4-b"
path = "ITP2-4/itp2-4-b.rs"

[[bin]]
name = "itp2-4-c"
path = "ITP2-4/itp2-4-c.rs"

[[bin]]
name = "itp2-4-d"
path = "ITP2-4/itp2-4-d.rs"

[[bin]]
name = "itp2-5-a"
path = "ITP2-5/itp2-5-a.rs"

[[bin]]
name = "itp2-5-b"
path = "ITP2-5/itp2-5-b.rs"

[[bin]]
name = "itp2-5-c"
path = "ITP2-5/itp2-5-c.rs"

[[bin]]
name = "itp2-5-d"
path = "ITP2-5/itp2-5-d.rs"

[[bin]]
name = "itp2-6-a"
path = "ITP2-6/itp2-6-a.rs"

[[bin]]
name = "itp2-6-b"
path = "ITP2-6/itp2-6-b.rs"

[[bin]]
name = "itp2-6-c"
path = "ITP2-6/itp2-6-c.rs"

[[bin]]
name = "itp2-6-d"
path = "ITP2-6/itp2-6-d.rs"

[[bin]]
name = "itp2-7-a"
path = "ITP2-7/itp2-7-a.rs"

[[bin]]
name = "itp2-7-b"
path = "ITP2-7/itp2-7-b.rs"

[[bin]]
name = "itp2-7-c"
path = "ITP2-7/itp2-7-c.rs"

[[bin]]
name = "itp2-7-d"
path = "ITP2-7/itp2-7-d.rs"

[[bin]]
name = "itp2-8-a"
path = "ITP2-8/itp2-8-a.rs"

[[bin]]
name = "itp2-8-b"
path = "ITP2-8/itp2-8-b.rs"

[[bin]]
name = "itp2-8-c"
path = "ITP2-8/itp2-8-c.rs"

[[bin]]
name = "itp2-8-d"
path = "ITP2-8/itp2-8-d.rs"

[[bin]]
name = "itp2-9-a"
path = "ITP2-9/itp2-9-a.rs"

[[bin]]
name = "itp2-9-b"
path = "ITP2-9/itp2-9-b.rs"

[[bin]]
name = "itp2-9-c"
path = "ITP2-9/itp2-9-c.rs"

[[bin]]
name = "itp2-9-d"
path = "ITP2-9/itp2-9-d.rs"
